update build system for local

--- a/libexec/mport.check-for-older/Makefile
+++ b/libexec/mport.check-for-older/Makefile
@@ -1,10 +1,12 @@
 PROG= mport.check-for-older
 
-CFLAGS+=	-I${.CURDIR}/../../lib/libmport/ -fblocks
+CFLAGS+=	-I ../../libmport/ -fblocks
 WARNS?= 	4
 
 MK_MAN= no
 
 LIBADD= mport dispatch BlocksRuntime pthread
+
+LDFLAGS += -L../libmport -lmport -ldispatch -lBlocksRuntime -lpthread
 
 .include <bsd.prog.mk>
