--- a/mport/Makefile
+++ b/mport/Makefile
@@ -1,6 +1,6 @@
 PROG= mport
 
-CFLAGS= -I${SRCTOP}/lib/libmport/ -fblocks -g
+CFLAGS= -I ../libmport/ -fblocks -g -L../libmport -lmport -ldispatch -lBlocksRuntime
 
 LIBADD+=	mport dispatch BlocksRuntime
 
