--- a/libexec/mport.init/Makefile
+++ b/libexec/mport.init/Makefile
@@ -1,11 +1,12 @@
 PROG= mport.init
 
-CFLAGS+=	-I${.CURDIR}/../../lib/libmport/ -fblocks
+CFLAGS+=	-I${.CURDIR}/../../libmport/ -fblocks
 WARNS?= 	4
 
 MK_MAN=		no
 
 LIBADD+=	mport dispatch BlocksRuntime pthread
 
+LDFLAGS += -L../libmport -lmport -ldispatch -lBlocksRuntime -lpthread
 
 .include <bsd.prog.mk>
