--- a/libexec/mport.version_cmp/Makefile
+++ b/libexec/mport.version_cmp/Makefile
@@ -1,10 +1,12 @@
 PROG= mport.version_cmp
 
-CFLAGS+=	-I${.CURDIR}/../../lib/libmport/ -fblocks
+CFLAGS+=	-I${.CURDIR}/../../libmport/ -fblocks
 WARNS?= 	4
 
 MK_MAN= no
 
 LIBADD= mport dispatch BlocksRuntime pthread
+
+LDFLAGS += -L../libmport -lmport -ldispatch -lBlocksRuntime -lpthread
 
 .include <bsd.prog.mk>
