Add support for ldconfig ldconfig-linux commands in plist

--- a/.gitignore
+++ b/.gitignore
@@ -22,22 +22,14 @@
 *.la
 *.lo
 
-# Shared objects (inc. Windows DLLs)
-*.dll
 *.so
 *.so.*
-*.dylib
 
 *.pico
 *.depend
 
 # Executables
-*.exe
 *.out
-*.app
-*.i*86
-*.x86_64
-*.hex
 
 # Debug files
 *.dSYM/
@@ -45,11 +37,5 @@
 *.idb
 *.pdb
 
-# Kernel Module Compile Results
-*.mod*
-*.cmd
-.tmp_versions/
-modules.order
-Module.symvers
-Mkfile.old
-dkms.conf
+# built man pages
+*.gz
