--- a/libmport/Makefile
+++ b/libmport/Makefile
@@ -8,7 +8,8 @@ SRCS=	asset.c bundle_write.c bundle_read.c plist.c create_primative.c db.c \
 		default_cbs.c  merge_primative.c bundle_read_install_pkg.c \
 		update_primative.c bundle_read_update_pkg.c pkgmeta.c \
     	fetch.c index.c index_depends.c install.c clean.c setting.c  \
-   		stats.c update.c upgrade.c verify.c lock.c mkdir.c hashmap.c import_export.c
+   		stats.c update.c upgrade.c verify.c lock.c mkdir.c hashmap.c import_export.c \
+   		autoremove.c
 INCS=	mport.h
 
 CFLAGS+=	-I${.CURDIR} -I/usr/include/private/ucl
