--- a/mport/Makefile
+++ b/mport/Makefile
@@ -2,7 +2,7 @@ PROG= mport
 
 CFLAGS= -I ../libmport/ -g -L../libmport -lmport
 
-LIBADD+=	mport dispatch BlocksRuntime
+LIBADD+=	mport
 
 BINDIR=	/usr/sbin
 
