--- a/libexec/Makefile
+++ b/libexec/Makefile
@@ -1,17 +1,16 @@
 SUBDIR=	mport.check-fake \
 	mport.check-for-older \
+	mport.create \
 	mport.delete \
+	mport.fetch \
 	mport.info \
+	mport.init \
 	mport.install \
+	mport.list \
 	mport.merge \
 	mport.update \
-	mport.version_cmp \
-	mport.check-fake \
-	mport.create \
-	mport.fetch \
-	mport.init \
-	mport.list \
+	mport.updepends \
 	mport.query \
-	mport.updepends
+	mport.version_cmp
 
 .include <bsd.subdir.mk>
