Introduce a flatsize concept.
This shows how much disk space an installed package is using.

--- a/libmport/Makefile
+++ b/libmport/Makefile
@@ -20,8 +20,8 @@ WARNS=	3
 
 MK_PROFILE=no
 
-LIBADD=	md archive bz2 lzma z fetch sqlite3 ucl pthread
+LIBADD=	md archive bz2 lzma z fetch sqlite3 ucl pthread util
 
-LDFLAGS+=	-lmd -larchive -lbz2 -llzma -lz -lfetch -lsqlite3 -lpthread -lprivateucl
+LDFLAGS+=	-lmd -larchive -lbz2 -llzma -lz -lfetch -lsqlite3 -lpthread -lprivateucl -lutil
 
 .include <bsd.lib.mk>
