--- a/mport/Makefile
+++ b/mport/Makefile
@@ -1,6 +1,7 @@
 PROG= mport
 
 CFLAGS= -I ../libmport/ -g -L../libmport -lmport -lutil
+CFLAGS+= -Werror -Wunused-variable -Wshadow -Wincompatible-pointer-types-discards-qualifiers
 
 LIBADD+=	mport util
 
