--- a/libmport/Makefile
+++ b/libmport/Makefile
@@ -9,10 +9,10 @@ SRCS=	asset.c bundle_write.c bundle_read.c plist.c create_primative.c db.c \
 		update_primative.c bundle_read_update_pkg.c pkgmeta.c \
     	fetch.c index.c index_depends.c install.c clean.c setting.c  \
    		stats.c update.c upgrade.c verify.c lock.c mkdir.c import_export.c \
-   		autoremove.c audit.c ping.c message.c
+   		autoremove.c audit.c ping.c message.c service.c
 INCS=	mport.h
 
-CFLAGS+=	-I${.CURDIR} -I/usr/include/private/ucl
+CFLAGS+=	-I${.CURDIR} -I/usr/include/private/ucl -I/usr/include/ucl
 SHLIB_MAJOR=	2
 MAN=	mport.3
 
