zstd compressed index files. (#92)
* start migration to zstd compressed index files.

--- a/libexec/mport.query/Makefile
+++ b/libexec/mport.query/Makefile
@@ -1,6 +1,6 @@
 PROG= mport.query
 
-CFLAGS+=	-I${.CURDIR}/../../libmport/ -I/usr/include/private/ucl
+CFLAGS+=	-I${.CURDIR}/../../libmport/ -I/usr/include/private/ucl -I ../../external/tllist/ -I/usr/include/private/zstd 
 WARNS?= 	4
 
 MK_MAN= no
