--- a/libmport/Makefile
+++ b/libmport/Makefile
@@ -9,7 +9,8 @@ SRCS=	asset.c bundle_write.c bundle_read.c plist.c create_primative.c db.c \
 		update_primative.c bundle_read_update_pkg.c pkgmeta.c \
     	fetch.c index.c index_depends.c install.c clean.c setting.c  \
    		stats.c update.c upgrade.c verify.c lock.c mkdir.c import_export.c \
-   		autoremove.c audit.c ping.c message.c service.c list.c
+   		autoremove.c audit.c ping.c message.c service.c list.c \
+		lua.c lua_scripts.c
 INCS=	mport.h
 
 CFLAGS+=	-I${.CURDIR} -I ../external/tllist/ -I/usr/include/private/ucl -I/usr/include/ucl -I/usr/include/private/zstd
@@ -22,6 +23,6 @@ MK_PROFILE=no
 
 LIBADD=	md archive lzma z fetch sqlite3 ucl pthread util zstd
 
-LDFLAGS+=	-lmd -larchive -llzma -lz -lfetch -lsqlite3 -lpthread -lprivateucl -lutil -lprivatezstd
+LDFLAGS+=	-lmd -larchive -llzma -lz -lfetch -lsqlite3 -lpthread -lprivateucl -lutil -lprivatezstd -l:liblua.a -L ../liblua 
 
 .include <bsd.lib.mk>
