--- a/libmport/Makefile
+++ b/libmport/Makefile
@@ -13,7 +13,7 @@ SRCS=	asset.c bundle_write.c bundle_read.c plist.c create_primative.c db.c \
 		lua.c lua_scripts.c
 INCS=	mport.h
 
-CFLAGS+=	-I${.CURDIR} -I ../external/tllist/ -I ../external/lua/src/ -I/usr/include/private/ucl -I/usr/include/ucl -I/usr/include/private/zstd 
+CFLAGS+=	-I${.CURDIR} -I ../external/tllist/ -I ../external/lua/src/ -I/usr/include/private/ucl -I/usr/include/ucl -I/usr/include/private/zstd
 SHLIB_MAJOR=	2
 MAN=	mport.3
 
@@ -23,6 +23,6 @@ MK_PROFILE=no
 
 LIBADD=	md archive lzma z fetch sqlite3 ucl pthread util zstd
 
-LDFLAGS+=	-lmd -larchive -llzma -lz -lfetch -lsqlite3 -lpthread -lprivateucl -lutil -lprivatezstd -l:liblua.a -L ../liblua 
+LDFLAGS+=	-lmd -larchive -llzma -lz -lfetch -lsqlite3 -lpthread -lprivateucl -lutil -lprivatezstd -l:liblua.a -L ${.CURDIR}/../liblua 
 
 .include <bsd.lib.mk>
