--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -30,9 +30,11 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y bmake libarchive-dev xz-utils libsqlite3-dev libzstd-dev
+          git clone https://github.com/vstakhov/libucl.git
+          cd libucl; ./autogen.sh; ./configure; make; sudo make install
 
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v2
+        uses: github/codeql-action/init@v3
         with:
           languages: ${{ matrix.language }}
           queries: +security-and-quality
