--- a/libmport/Makefile
+++ b/libmport/Makefile
@@ -21,8 +21,8 @@ WARNS=	3
 
 MK_PROFILE=no
 
-LIBADD=	md archive lzma z fetch sqlite3 ucl pthread util zstd
+LIBADD=	md archive lzma z elf fetch sqlite3 ucl pthread util zstd
 
-LDFLAGS+=	-lmd -larchive -llzma -lz -lfetch -lsqlite3 -lpthread -lprivateucl -lutil -lprivatezstd -l:liblua.a -L ${.CURDIR}/../liblua 
+LDFLAGS+=	-lmd -larchive -llzma -lz -lelf -lfetch -lsqlite3 -lpthread -lprivateucl -lutil -lprivatezstd -l:liblua.a -L ${.CURDIR}/../liblua 
 
 .include <bsd.lib.mk>
