rework color detection.  Improve accuracy and check some additional vars.  This should make us more likely to correctly detect it.
If magus is defined, act like we're not a terminal

--- a/libmport/Makefile
+++ b/libmport/Makefile
@@ -1,7 +1,7 @@
 PACKAGE=lib${LIB}
 
 LIB=	mport
-SRCS=	asset.c bundle_write.c bundle_read.c plist.c create_primative.c db.c \
+SRCS=	asset.c bundle_write.c bundle_read.c plist.c color.c create_primative.c db.c \
         util.c error.c \
         info.c install_primative.c instance.c \
 		version_cmp.c check_preconditions.c delete_primative.c \
