add some annotation support to libmport.  (not hooked to packages yet)

--- a/libmport/Makefile
+++ b/libmport/Makefile
@@ -9,7 +9,7 @@ SRCS=	asset.c bundle_write.c bundle_read.c plist.c color.c create_primative.c db
 		update_primative.c bundle_read_update_pkg.c pkgmeta.c \
     	fetch.c index.c index_depends.c install.c clean.c setting.c  \
    		stats.c update.c upgrade.c verify.c lock.c mkdir.c import_export.c \
-   		autoremove.c audit.c ping.c message.c service.c list.c \
+   		annotation.c autoremove.c audit.c ping.c message.c service.c list.c \
 		lua.c lua_scripts.c
 INCS=	mport.h
 
